# opencomputer-demo

./: .env.example  .gitignore  README.md  agent.py  build_snapshot.py  pyproject.toml  run_once.py  server.py
greet/: cli.py
tests/: test_cli.py
