[project]
name = "greet"
version = "0.1.0"
description = "A tiny greeting CLI used to demo a background coding agent."
requires-python = ">=3.10"

[project.scripts]
greet = "greet.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["greet"]
